# minecraft-p2p-connector

./: .env.example  .gitignore  PROJECT_SNAPSHOT.md  README.md  callback.html  check_ids.cjs  check_ids.js  fix_rawstr.py  package-lock.json  package.json  patch_auto_port.cjs  patch_icons.cjs  patch_theme_badge.cjs  release_notes.md  scratch_task.py  tailwind.config.js  test_browser.cjs  update_main_features.cjs  v0.3.24_attempt_summary.txt  vite.config.js
.codex/agents/: code-reviewer.toml  devops-engineer.toml  rust-engineer.toml  security-engineer.toml
.github/workflows/: cloudflare-turn-worker.yml  release.yml
apps/: README.md
apps/cloudflare-turn-worker/: .gitignore  Cargo.toml  README.md  package.json  wrangler.toml
apps/cloudflare-turn-worker/src/: lib.rs
crates/: README.md
docs/: cloudflare-turn-deploy.md  github-repos-plan.md  roadmap.md  vision.md  workspace-map.md
docs/analysis/: newrepo-13-projects-report.md  voxel-kurai.md
docs/architecture/: russia-free-connector.md
docs/releases/: p2p-connector-next-release.md
docs/superpowers/plans/: 2026-05-19-supabase-auth.md  2026-05-20-async-oauth.md
docs/superpowers/specs/: 2026-05-19-supabase-auth-design.md  2026-05-20-async-oauth-design.md
friends-server/: package.json  server.js
relay-server/src/: main.rs
signaling-server/: Cargo.toml
signaling-server/src/: main.rs
src/: App.vue  callback.html  fix_html.cjs  fix_listeners.cjs  i18n.js  index.html  main.js  styles.css  supabase.js  update_html_features.cjs  update_main_features.cjs  verify_elements.cjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cert.rs  diagnostics.rs  main.rs  models.rs  signaling.rs
src-tauri/src/network/: bedrock_broadcaster.rs  cloudflare.rs  cloudflare_rtc.rs  e4mc.rs  geyser.rs  java_downloader.rs  manager.rs  minecraft.rs  mod.rs  nethernet_broadcaster.rs  network_swarm.rs  proxy.rs  selfcheck.rs  stun.rs  test_server.rs  tunnel.rs  tunnel_fix.cjs  upnp.rs  wss_relay.rs  yggstack.rs
src/views/: HomeView.vue
