[package]
name = "minecraft-p2p-signaling-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.15", features = ["v4"] }

