[package]
name = "minecraft-p2p-connector"
version = "0.2.0"
edition = "2021"
rust-version = "1.83"
description = "Low-latency Minecraft Java P2P LAN connector over QUIC"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0" }

[dependencies]
anyhow = "1.0"
hickory-resolver = { version = "0.26.0-beta.3", features = ["tokio"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rcgen = "0.13"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "hickory-dns"] }
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = ["wry", "tray-icon"] }
tauri-plugin-global-shortcut = "2.3.1"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.15", features = ["serde", "v4"] }
webrtc = "0.8.0"
