[package]
name = "cloudflare-turn-worker"
version = "0.1.0"
edition = "2021"
description = "Short-lived Cloudflare TURN credential worker for Minecraft P2P Connector"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
worker = "0.7"
